docker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hub-harbor-ext
  namespace: docker
  annotations:
    kubernetes.io/ingress.class: nginx-external
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    acme.kubernetes.io/enable: "true"
    acme.kubernetes.io/dns: "dns_cf"
spec:
  rules:
    - host: hub.skj.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hub-harbor-portal
                port:
                  number: 80
          - backend:
              service:
                name: hub-harbor-core
                port:
                  number: 80
            path: /service
            pathType: Prefix
          - backend:
              service:
                name: hub-harbor-core
                port:
                  number: 80
            path: /v2
            pathType: Prefix
          - backend:
              service:
                name: hub-harbor-core
                port:
                  number: 80
            path: /chartrepo
            pathType: Prefix
          - backend:
              service:
                name: hub-harbor-core
                port:
                  number: 80
            pathType: Prefix
            path: /c
  tls:
    - hosts:
        - hub.skj.dev
      secretName: hubskjdev-tls
