docker/registry.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: docker
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          image: registry:2.7.1
          ports:
            - name: http
              containerPort: 5000
          volumeMounts:
            - name: images
              mountPath: "/var/lib/registry"
            - name: registry
              mountPath: "/etc/docker/registry"
            - name: htpasswd
              mountPath: "/auth"
      volumes:
        - name: registry
          configMap:
            name: registry
        - name: images
          persistentVolumeClaim:
            claimName: images
        - name: htpasswd
          secret:
            secretName: htpasswd
            items:
              - key: htpasswd
                path: htpasswd

---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: docker
spec:
  ports:
    - name: http
      port: 5000
  selector:
    app: registry
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: registry
  namespace: docker
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/whitelist-source-range: '10.0.0.0/16, 192.168.0.0/16'
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/auth-realm: "registry"
spec:
  rules:
    - host: docker.ttys0.net
      http:
        paths:
          - path: /
            backend:
              serviceName: registry
              servicePort: 5000
  tls:
    - hosts:
        - docker.ttys0.net
      secretName: docker-tls
